apis added in swagger docs
